--- a/GrayCore.Tests16.vcxproj.filters
+++ b/GrayCore.Tests16.vcxproj.filters
@@ -108,9 +108,6 @@
     <ClCompile Include="cFileText.Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cFileTextReader.Tests.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="cOSModule.Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -190,6 +187,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cFloatDeco.Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cAppImpl.Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cStreamTextReader.Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
