more cleanup and update tests.

--- a/GrayCore.Tests17.vcxproj.filters
+++ b/GrayCore.Tests17.vcxproj.filters
@@ -195,6 +195,12 @@
     <ClCompile Include="cStreamTextReader.Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cCmdInput.Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cThreadLocal.Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
