--- a/GrayCore.Tests17.vcxproj
+++ b/GrayCore.Tests17.vcxproj
@@ -121,6 +121,7 @@
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -137,6 +138,7 @@
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -157,6 +159,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -177,6 +180,7 @@
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -195,6 +199,7 @@
     <ClCompile Include="cArraySortString.Tests.cpp" />
     <ClCompile Include="cAtom.Tests.cpp" />
     <ClCompile Include="cBits.Tests.cpp" />
+    <ClCompile Include="cCmdInput.Tests.cpp" />
     <ClCompile Include="cCodeProfiler.Tests.cpp" />
     <ClCompile Include="cException.Tests.cpp" />
     <ClCompile Include="cFile.Tests.cpp" />
@@ -226,6 +231,7 @@
     <ClCompile Include="cStreamTextReader.Tests.cpp" />
     <ClCompile Include="cString.Tests.cpp" />
     <ClCompile Include="cSystemInfo.Tests.cpp" />
+    <ClCompile Include="cThreadLocal.Tests.cpp" />
     <ClCompile Include="cThreadLock.Tests.cpp" />
     <ClCompile Include="cThreadLockRW.Tests.cpp" />
     <ClCompile Include="cTimeDouble.Tests.cpp" />
